--- a/.github/workflows/stamp-private-sha.yml
+++ b/.github/workflows/stamp-private-sha.yml
@@ -12,20 +12,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Install OpenTimestamps
         run: sudo apt-get update && sudo apt-get install -y opentimestamps-client
+
       - name: Stamp SHA256 files
+        shell: bash
         run: |
           shopt -s nullglob
           for f in legal/private-archive-*.SHA256; do
+            echo "Stamping $f"
             ots stamp "$f"
           done
-      - name: Commit .ots proofs
+
+      - name: Commit .ots proofs (if any)
+        shell: bash
         run: |
-          if git status --porcelain | grep '.ots'; then
-            git config user.email "${{ github.actor }}@users.noreply.github.com"
-            git config user.name "github-actions[bot]"
-            git add legal/*.ots
+          git config user.email "${{ github.actor }}@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git add legal/*.SHA256.ots || true
+          if ! git diff --cached --quiet; then
             git commit -m "chore(ots): add OpenTimestamps proofs for sealed archives"
             git push
+          else
+            echo "No .ots to commit."
           fi
