--- a/.github/workflows/stamp-private-sha.yml
+++ b/.github/workflows/stamp-private-sha.yml
@@ -13,8 +13,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install OpenTimestamps
-        run: sudo apt-get update && sudo apt-get install -y opentimestamps-client
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+
+      - name: Install OpenTimestamps (pip)
+        run: |
+          python -m pip install --upgrade pip
+          pip install opentimestamps-client
 
       - name: Stamp SHA256 files
         shell: bash
